implement meal functionality

--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -7,18 +7,37 @@
   <a href="/flights/<%= flight._id %>/edit">
     <button>Edit Flight ✏️</button>
   </a>
-  <h1>Flight #<%= flight.flightNo %></h1>
-  <h2>Airline: <%= flight.airline %></h2>
-  <h2>Airport: <%= flight.airport %></h2>
-  <h2>Departure: <%= flight.departs.toLocaleString() %></h2>
+  <h2>Flight #<%= flight.flightNo %></h2>
+  <h3>Airline: <%= flight.airline %></h3>
+  <h3>Airport: <%= flight.airport %></h3>
+  <h3>Departure: <%= flight.departs.toLocaleString() %></h3>
+  <h2>Meals served:</h2>
+  <% if (flight.meals.length) { %>
+    <ul>
+      <% flight.meals.forEach(meal => { %>
+        <li><%= meal.name %></li>
+      <% }) %>
+    </ul>
+  <% } else { %>
+    <h3>There are no meals for flight # <%= flight.flightNo %></h3>
+  <% } %>
+  <form action="/flights/<%= flight._id %>/meals" method="POST">
+    <label for="meal-input">Add Meal to Flight:</label>
+    <select name="mealId" id="meal-input">
+      <% mealsNotInFlight.forEach(meal => { %>
+        <option value="<%= meal._id %>"><%= meal.name %></option>
+      <% }) %>
+    </select>
+    <button type="submit">Add Meal 🍴</button>
+  </form>
+  <h2>Tickets:</h2>
   <form method="POST" action="/flights/<%= flight._id %>/tickets">
     <label for="seat-input">Seat (A1-F99):</label>
     <input name="seat" id="seat-input" required pattern="[A-F][1-9]\d?">
     <label for="price-input">Price ($):</label>
     <input type="number" name="price" id="price-input" required min="0">
     <button type="submit">Add Ticket 💺</button>
-  </form>
-  <h1>Tickets:</h1>
+  </form><br>
   <% if (flight.tickets.length) { %>
     <table>
       <thead>
@@ -43,7 +62,7 @@
       </tbody>
     </table>
   <% } else { %>
-    <h2>There are no tickets for flight # <%= flight.flightNo %></h2>
+    <h3>There are no tickets for flight # <%= flight.flightNo %></h3>
   <% } %>
 </main>
 
