adjust date formatting

--- a/views/flights/edit.ejs
+++ b/views/flights/edit.ejs
@@ -1,5 +1,6 @@
 <%- include('../partials/html-head') %>
 <link rel="stylesheet" href="/stylesheets/flights/edit.css">
+<script defer src="/javascripts/date-helpers.js"></script>
 <%- include('../partials/nav') %>
 
 <main>
@@ -25,6 +26,7 @@
     <input type="number" required value="<%= flight.flightNo %>" name="flightNo" id="flight-num-input" min="10" max="9999">
     <label for="departs-input">Departure:</label>
     <input type="datetime-local" value="<%= localISOTime %>" name="departs" id="departs-input">
+    <input type="datetime-local" id="hidden-date" name="currentLocalDateTime" hidden>
     <button type="submit">Save Flight 💾</button>
   </form>
 </main>
