--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -24,6 +24,7 @@
     <input type="number" required name="flightNo" id="flight-num-input" min="10" max="9999">
     <label for="departs-input">Departure:</label>
     <input type="datetime-local" name="departs" id="departs-input">
+    <input type="datetime-local" id="hidden-date" name="currentLocalDateTime" hidden>
     <button type="submit">Add Flight 🛫</button>
   </form>
 </main>
