--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -22,7 +22,7 @@
           <td><%= flight.flightNo %></td>
           <td><%= flight.airline %></td>
           <td><%= flight.airport %></td>
-          <td><%= flight.departs.toLocaleString() %></td>
+          <td><%= flight.departs.toLocaleString('en-US', {month: 'numeric', day: 'numeric', year: '2-digit'}) %></td>
           <td>
             <form action="/flights/<%= flight._id %>?_method=DELETE" method="POST">
               <button>🗑️</button>
