--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -10,7 +10,7 @@
   <h2>Flight #<%= flight.flightNo %></h2>
   <h3>Airline: <%= flight.airline %></h3>
   <h3>Airport: <%= flight.airport %></h3>
-  <h3>Departure: <%= flight.departs.toLocaleString() %></h3>
+  <h3>Departure: <%= flight.departs.toLocaleString('en-US', {weekday: 'long', month: 'short', day: 'numeric', year: 'numeric', hour: 'numeric', minute: 'numeric'}) %></h3>
   <h2>Meals served:</h2>
   <% if (flight.meals.length) { %>
     <ul>
