add beginnings of styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <%- include('./partials/html-head') %>
+<link rel="stylesheet" href="/stylesheets/index.css">
 <%- include('./partials/nav') %>
 
-<h1>Mongoose Flights</h1>
+<img src="/images/landingB.png" alt="An aviator mongoose">
 
 <%- include('./partials/footer') %>
