--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,7 +2,15 @@
 <body>
 
   <nav>
-    <a href="/flights/new">Add Flight</a>
-    <a href="/flights">All Flights</a>
-    <a href="/meals/new">Add Meal</a>
+    <a href="/">
+      <div class="logo-container">
+        <img src="/images/logoA.png" alt="A mongoose wearing aviator goggles">
+        <h1>Mongoose Airlines</h1>
+      </div>
+    </a>
+    <div class="link-container">
+      <a href="/flights/new">Add Flight</a>
+      <a href="/flights">All Flights</a>
+      <a href="/meals/new">Add Meal</a>
+    </div>
   </nav>
