--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,93 @@
 body {
-  padding: 20px;
+  margin: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
+  --primary-dark: #202C39;
+  --secondary-dark: #283845;
+  --primary-light: #B8B08D;
+  --secondary-light: #F2D492;
+  --highlight: #F29559;
+  background-color: var(--secondary-light);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+  color: var(--secondary-dark);
+  overflow: hidden;
 }
 
 a {
-  color: #00B7FF;
+  margin-right: 16px;
+  text-decoration: none;
+  color: var(--highlight);
 }
 
-nav > a {
-  margin-right: 16px;
+div > img {
+  height: 50px;
+  margin: 0px 16px;
+}
+
+nav {
+  color: var(--highlight);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--primary-dark);
+  height: 10%;
+  width: 100%;
+}
+
+.logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+body > img {
+  height: 90%;
+  right: 0;
+  border-radius: 16px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 90%;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+input, select {
+  width: 200px;
+  height: 30px;
+  text-align: center;
+  border: 1px solid var(--secondary-dark);
+  background-color: var(--primary-light);
+  color: var(--secondary-dark);
+  font-weight: bold;
+  border-radius: 8px;
+  margin: 8px;
+}
+
+label {
+  margin-top: 8px;
+}
+
+button {
+  width: 200px;
+  height: 50px;
+  border: 1px solid var(--primary-dark);
+  border-radius: 8px;
+  background-color: var(--highlight);
+  color: var(--secondary-dark);
+  font-size: 16px;
+  font-weight: bold;
+  margin-top: 16px;
 }
