--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,19 +12,20 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
   color: var(--secondary-dark);
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
-a {
-  margin-right: 16px;
+.link-container > a, nav > a {
+  margin-right: 32px;
   text-decoration: none;
   color: var(--highlight);
+  font-size: 2.5vh;
+  font-weight: bold;
 }
 
 div > img {
-  height: 50px;
+  height: 5vw;
   margin: 0px 16px;
 }
 
@@ -45,7 +46,7 @@ nav {
 }
 
 body > img {
-  height: 90%;
+  width: 100%;
   right: 0;
   border-radius: 16px;
 }
@@ -54,7 +55,6 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 90%;
 }
 
 form {
@@ -78,6 +78,7 @@ input, select {
 
 label {
   margin-top: 8px;
+  font-weight: bold;
 }
 
 button {
