--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 div > img {
-  height: 5vw;
+  height: 8vh;
   margin: 0px 16px;
 }
 
@@ -46,7 +46,7 @@ nav {
 }
 
 body > img {
-  width: 100%;
+  height: 100%;
   right: 0;
   border-radius: 16px;
 }
